# Automated-testing-tool

./: .gitignore  README.md  index.html  package-lock.json  package.json  public.rar  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vite.config.ts.timestamp-1719407545746-85d1fe09d16ca.mjs  优化点.docx  其他测试软件.docx  基础测试用例集合-部分.xlsx  基础测试用例集合.xlsx  软件测试录制回放工具使用说明.docx
lib/: monaco-store.ts
lib/icons/: index.tsx
public/: batch_running.html  script_edit.html  splashscreen.html
src/: App.vue  InputEvent.ts  main.js  main.ts  python.worker.ts  router.ts
src-tauri/: Cargo.toml  server.py  tauri.conf.json
src-tauri/Automated-testing/result/2023-11-16 21-52-58/: record.txt
src-tauri/Automated-testing/result/2023-11-16 21-54-17/: record.txt
src-tauri/result/: record.txt
src-tauri/result/2023-11-16 21-25-31/: record.txt
src-tauri/result/2023-11-16 21-25-40/: record.txt
src-tauri/result/2023-11-16 21-25-56/: record.txt
src-tauri/src/: command.rs  main.rs  menu.rs
src-tauri/src/playback/: keyboard_action.rs  mod.rs  mouse_action.rs  playback_main.rs  screen_shot_action.rs  script_edit.rs  translate.rs
src-tauri/src/record/: mod.rs  mouse_monitor.rs  record_main.rs  screen_shot.rs
src/components/: BasicUsage.vue  Greet.vue  MessageStoreUseage.vue  RecordPage.vue  a.vue  app.py  function.py  ide.vue  mock-server.ts  script_edit.vue  transcribe.vue
src/router/: index.js
