[package]
name = "automated-testing-tools"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
device_query = "1.1.3"
rdev = "0.5.3"
lazy_static = "1.4.0"
screenshots = "0.8.5"
enigo = "0.1.3"
chrono = "0.4"
image = "0.24.7"
image-compare = "0.3"
clipboard = "0.5.0"
tokio = "1.33.0"
notify = "6.1.0"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
